welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:13: error: value avance is not a member of Unit
left()avance()
      ^MethodsDogHouse:24: error: value avance is not a member of Unit
left()avance()
      ^MethodsDogHouse:35: error: value avance is not a member of Unit
left()avance()
      ^MethodsDogHouse:52: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:58: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:68: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:78: error: not found: value dogHouse
		dogHouse();		
                ^